Person Phone Not Working TWIG
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/views/Form/phoneCollection.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Form/phoneCollection.html.twig
@@ -6,6 +6,7 @@
 
 
 {% block phone_widget %}
+    {% set type = type|default('phone') %}
 	<div class="well phoneNumber">
 		<div class="row">
 			<div class="col-sm-6">
