--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -19,12 +19,12 @@
 							<h3 class="panel-title">{{ form_label(form.phone) }}</h3>
 						</div>
 						<div class="panel-body">
-							<p class="alert alert-warning">{{ 'phone.save'|trans  }}</p>
+							<p class="alert alert-warning">{{ 'phone.save'|trans({}, 'BusybeePersonBundle')  }}</p>
 							{{ form_widget(form.phone) }}
-                            {% do form.phone.setRendered %}
 						</div>
 					</div>
 				</div>
+                {% do form.phone.setRendered %}
 				<div class="col-sm-6">
 					<div class="row">
 						<div class="col-sm-12 well">
