--- a/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
@@ -92,6 +92,30 @@
                     $("#person_address2_list").val(label2)
                 }
             });
+            var staff_checked = $('#person_staffQuestion').prop('checked');
+            if (staff_checked) {
+                $('.staffMember').prop('disabled', false);
+            } else {
+                $('.staffMember').prop('disabled', true);
+            }
+            var careGiver_checked = $('#person_careGiverQuestion').prop('checked');
+            if (careGiver_checked) {
+                $('.careGiver').prop('disabled', false);
+            } else {
+                $('.careGiver').prop('disabled', true);
+            }
+            var student_checked = $('#person_studentQuestion').prop('checked');
+            if (student_checked) {
+                $('.student').prop('disabled', false);
+            } else {
+                $('.student').prop('disabled', true);
+            }
+            var user_checked = $('#person_userQuestion').prop('checked');
+            if (user_checked) {
+                $('.user').prop('disabled', false);
+            } else {
+                $('.user').prop('disabled', true);
+            }
 
         });
 
@@ -114,13 +138,55 @@
         } );
 
         $(".phoneNumberList").collection({
-            'name_prefix': '{{ form.phone.vars.full_name }}',
-            'allow_up': false,
-            'allow_down': false,
-            'add': '<button title="{{ 'contact.phone.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-            'remove': '<button title="{{ 'contact.phone.delete'|trans}}" type="button" class="halflings halflings-remove-sign btn btn-warning" style="float: right;"></button>',
+            name_prefix: '{{ form.phone.vars.full_name }}',
+            allow_up: false,
+            allow_down: false,
+            add: '<button title="{{ 'contact.phone.add'|trans({}, 'BusybeePersonBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+            remove: '<button title="{{ 'contact.phone.remove'|trans({}, 'BusybeePersonBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
             add_at_the_end: true
         });
 
-
+        $(".yes-no").checkboxpicker({
+            iconCls: "halflings"
+        });
+        $('#person_staffQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_staffQuestion').prop('checked');
+            if (checked) {
+                $('.staffMember').prop('disabled', false);
+                $('#person_studentQuestion').prop('disabled', true);
+            } else {
+                $('.staffMember').prop('disabled', true);
+                $('#person_studentQuestion').prop('disabled', false);
+            }
+        });
+        $('#person_careGiverQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_careGiverQuestion').prop('checked');
+            if (checked) {
+                $('.careGiver').prop('disabled', false);
+                $('#person_studentQuestion').prop('disabled', true);
+            } else {
+                $('.careGiver').prop('disabled', true);
+                $('#person_studentQuestion').prop('disabled', false);
+            }
+        });
+        $('#person_studentQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_studentQuestion').prop('checked');
+            if (checked) {
+                $('.student').prop('disabled', false);
+                $('#person_staffQuestion').prop('disabled', true);
+                $('#person_careGiverQuestion').prop('disabled', true);
+            } else {
+                $('.student').prop('disabled', true);
+                $('#person_staffQuestion').prop('disabled', false);
+                $('#person_careGiverQuestion').prop('disabled', false);
+            }
+        });
+        $('#person_userQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_userQuestion').prop('checked');
+            if (checked) {
+                $('.user').prop('disabled', false);
+            } else {
+                $('.user').prop('disabled', true);
+            }
+        });
     </script>
