--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -14,17 +14,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-6">
-					<div class="panel panel-info busybee-panel">
-						<div class="panel-heading">
-							<h3 class="panel-title">{{ form_label(form.phone) }}</h3>
-						</div>
-						<div class="panel-body">
-							<p class="alert alert-warning">{{ 'phone.save'|trans({}, 'BusybeePersonBundle')  }}</p>
-							{{ form_widget(form.phone) }}
-						</div>
-					</div>
+                    {% include 'BusybeePersonBundle:Person:phones.html.twig' %}
 				</div>
-                {% do form.phone.setRendered %}
 				<div class="col-sm-6">
 					<div class="row">
 						<div class="col-sm-12 well">
