--- a/src/Busybee/PersonBundle/Resources/views/Person/phones.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/phones.html.twig
@@ -1,4 +1,4 @@
-{# src/Busybee/PersonBundle/Resources/views/Form/person.html.twig #}
+{# src/Busybee/PersonBundle/Resources/views/Person/Phones.html.twig #}
 
 {% trans_default_domain "BusybeePersonBundle" %}
 
@@ -15,6 +15,12 @@
 	</div>
 	<div class="panel-body">
 		<p class="alert alert-warning">{{ 'phone.save'|trans  }}</p>
+        {% if phones is defined %}
+					<p class="alert alert-info"><strong>{{ 'Linked Phone Numbers'|trans }}</strong><br/>
+                    {% for phone in phones %}
+						{{ formatPhone(phone)|raw }}<br />
+                    {% endfor %}</p>
+        {% endif %}
 		{{ form_widget(form.phone) }}
 	</div>
 </div>
