Modify system to capture search information when returning from edit of person
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -6,7 +6,11 @@
 
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
-{{ form_start(form) }}
+{% if form_array is not defined  %}
+	{% set form_array = [] %}
+{% endif %}
+
+{{ form_start(form, form_array) }}
 
 <div class="container-fluid well">
 	<div class="row">
