Pagination next button bug fix. Pagination change to record display, not page display statistics
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -51,7 +51,7 @@
 	</div>				
 	<div class="row">
 		<div class="col-sm-12 text-right">
-			{{ 'pagination.figures'|trans({'%total%': pagination.getTotal, '%current%': pagination.getCurrentPage, '%pages%': pagination.getTotalPages} ) }}
+            {{ 'pagination.figures'|trans({'%total%': pagination.getTotal, '%current%': pagination.getCurrentPage, '%pages%': pagination.getTotalPages, '%first%': pagination.getFirstRecord, '%last%': pagination.getLastRecord} ) }}
 		</div>
 	</div>				
 </div>
