--- a/src/Busybee/FamilyBundle/Resources/views/Family/studentCollection.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/studentCollection.html.twig
@@ -14,7 +14,9 @@
 			<div class="col-sm-3 collection-actions">
 				<span>
 					<button title="{{ 'family.student.remove'|trans}}" type="button" class="collection-remove collection-action halflings halflings-erase btn btn-warning" style="float: right;"></button>
-					<button title="{{ 'family.studentContact.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary collection-add collection-action" style="float: right;"></button>
+					<button title="{{ 'family.student.add'|trans }}" type="button"
+							class="halflings halflings-plus-sign btn btn-primary collection-add collection-action"
+							style="float: right;"></button>
 				</span>
 			</div>
 		</div>
