--- a/src/Busybee/FormBundle/Resources/views/Template/jquery.collection.html.twig
+++ b/src/Busybee/FormBundle/Resources/views/Template/jquery.collection.html.twig
@@ -20,6 +20,7 @@
 #}
 
 {% block collection_widget %}
+    {{ dump(form) }}
     {% spaceless %}
         {% if prototype is defined %}
             {% set attr = attr|merge({'data-prototype': form_row(prototype)}) %}
