--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -1,4 +1,4 @@
-{# src/Busybee/PersonBundle/Resources/views/Form/person.html.twig #}
+{# src/Busybee/PersonBundle/Resources/views/Form/contact.html.twig #}
 
 {% trans_default_domain "BusybeePersonBundle" %}
 
@@ -9,7 +9,7 @@
 %}
 
 <div class="panel panel-primary busybee-panel">
-    {%  include "BusybeePersonBundle:Person:panelHeader.html.twig" %}
+    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.contact.title'} %}
 	<div class="panel-body">
 		<div class="container-fluid">
 			<div class="row">
