--- a/src/Busybee/PersonBundle/Resources/views/Person/user.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/user.html.twig
@@ -7,7 +7,7 @@
 %}
 
 <div class="panel panel-primary busybee-panel">
-    {%  include "BusybeePersonBundle:Person:panelHeader.html.twig" %}
+    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.user.title'} %}
 	<div class="panel-body">
 		<div class="container-fluid">
 			<div class="row">
