--- a/src/Busybee/PersonBundle/Resources/views/Person/Student.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/Student.html.twig
@@ -11,14 +11,22 @@
 	<div class="panel-body">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6 well">
+                <div class="col-sm-4 well">
                     {{ form_widget(form.student.person) }}
                     {{ form_row(form.student.startAtSchool) }}
 				</div>
-				<div class="col-sm-6 well">
+                <div class="col-sm-4 well">
                     {{ form_row(form.student.startAtThisSchool) }}
-				</div>
-			</div>
+                </div>
+                <div class="col-sm-4 well">
+                    {{ form_row(form.student.lastAtThisSchool) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 well">
+                    {{ form_row(form.student.status) }}
+                </div>
+            </div>
 		</div>
 	</div>
 </div>
