--- a/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
+++ b/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
@@ -1,11 +1,30 @@
 {% extends 'bootstrap_3_layout.html.twig' %}
 
+{% block image_label -%}
+    {% if data.pathname is defined and data.pathname is not empty %}
+        <img src="{{ asset( data.pathname ) }}" class="{{ attr.imageClass }}"/>
+        {{- form_label(form) -}}
+        {% if deletePhoto is not null %}
+            &nbsp;
+            <button class="btn btn-warning halflings halflings-remove-circle"
+                    title="{{ 'delete.photo'|trans({}, translation_domain) }}"
+                    onclick="window.open('{{ deletePhoto }}','DeletePhoto','width=50,height=50')"></button>
+        {% endif %}
+    {% else %}
+        {{- form_label(form) -}}
+    {% endif %}
+{%- endblock image_label %}
+
+{% block url_label -%}
+    {{- form_label(form) -}}
+    &nbsp;
+    <button title='{{ label|trans({}, translation_domain ) }}' type="button"
+            class="x075 halflings halflings-link btn btn-default"
+            onClick="window.open('{{ value }}','_blank')"></button>
+{%- endblock url_label %}
+
 {% block form_label -%}
-	{% if 'image' in block_prefixes and data.pathname is defined and data.pathname is not empty %}<img src="{{ asset( data.pathname ) }}" class="{{ attr.imageClass }}" />{% endif %}
     {%- set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' control-label')|trim}) -%}
-    {% if 'url' in block_prefixes and value is not empty %}
-        <button title='{{ label|trans({}, translation_domain ) }}' type="button" class="x075 halflings halflings-link btn btn-default" onClick="window.open('{{ value }}','_blank')"></button>
-    {%  endif %}
     {{- parent() -}}
 {%- endblock form_label %}
 
