Start work on Family CareGiver Link with extra fields. Fix DoB inport.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/views/People/importMatch.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/People/importMatch.html.twig
@@ -68,6 +68,14 @@
                 $("#" + id).html(content);
                 $("#" + id).show();
             }
+            else if (label == 'person.dob') {
+                name = name.replace('destination', 'option');
+                var content = '{% include 'BusybeePersonBundle:People:optionDoB.html.twig' %}';
+                content = content.replace(/__id__/g, id.replace('options', 'option'));
+                content = content.replace('__name__', name);
+                $("#" + id).html(content);
+                $("#" + id).show();
+            }
             else{
                 $("#" + id).hide(1000);
                 $("#" + id).html('&nbsp;');
