--- a/src/Busybee/FamilyBundle/Resources/views/Family/caregiver.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/caregiver.html.twig
@@ -7,7 +7,7 @@
 "BusybeeFamilyBundle:Family:careGiverCollection.html.twig"
 "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
-
+{% set currentOrder = 0 %}
 <div class="panel panel-info busybee-panel">
     <div class="panel-heading">
         <h3 class="panel-title">{{ form_label(form.careGiver) }}</h3>
