--- a/src/Busybee/FamilyBundle/Resources/views/Family/careGiverCollection.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/careGiverCollection.html.twig
@@ -1,15 +1,17 @@
 {% trans_default_domain "BusybeeFamilyBundle" %}
 
-
 {% block caregiver_label %}{% endblock %}
 {% block caregiver_errors %}{% endblock %}
-
 
 {% block caregiver_widget %}
     <div class="well familyCareGiver">
         <div class="row">
             <div class="col-sm-9">
                 {{ form_row(form.person) }}
+                {{ form_row(form.family) }}
+                {{ form_row(form.contactPriority) }}
+                <input name="family[careGiver][{{ form.vars.name }}][currentOrder]"
+                       value="{{ form.contactPriority.vars.value }}" type="hidden"/>
             </div>
             <div class="col-sm-3 collection-actions">
 				<span>
@@ -20,6 +22,26 @@
                             class="halflings halflings-plus-sign btn btn-primary collection-add collection-action"
                             style="float: right;"></button>
 				</span>
+            </div>
+        </div>
+        <div class="row row-striped">
+            <div class="col-sm-offset-3 col-sm-9">
+                {{ form_row(form.emailContact) }}
+            </div>
+        </div>
+        <div class="row row-striped">
+            <div class="col-sm-offset-3 col-sm-9">
+                {{ form_row(form.smsContact) }}
+            </div>
+        </div>
+        <div class="row row-striped">
+            <div class="col-sm-offset-3 col-sm-9">
+                {{ form_row(form.phoneContact) }}
+            </div>
+        </div>
+        <div class="row row-striped">
+            <div class="col-sm-offset-3 col-sm-9">
+                {{ form_row(form.mailContact) }}
             </div>
         </div>
     </div>
