--- a/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -9,6 +9,7 @@
 {% block stylesheets %}
     {{ parent() }}
     {% include 'BusybeeHomeBundle:AutoComplete:style.html.twig' %}
+    {% include 'BusybeeHomeBundle:Toggle:style.html.twig' %}
 {% endblock stylesheets %}
 
 
@@ -65,4 +66,5 @@
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
     {% include 'BusybeeFamilyBundle:Family:script.html.twig' %}
     {% include 'BusybeeHomeBundle:Scripts:monitorForm.js.twig' with {'route': 'family_manage'} %}
+    {% include 'BusybeeHomeBundle:Toggle:script.html.twig' %}
 {% endblock javascripts %}
