--- a/src/Busybee/FamilyBundle/Resources/views/Family/studentCollection.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/studentCollection.html.twig
@@ -13,6 +13,11 @@
             </div>
             <div class="col-sm-3 collection-actions">
 				<span>
+                    {% if form.person.vars.value is defined and form.person.vars.value > 0 %}
+                        <button title="{{ 'family.student.edit'|trans }}" style="float: right;" type="button"
+                                class=" halflings halflings-edit btn btn-info"
+                                onclick="window.open('{{ path('person_edit', {'id': form.person.vars.value}) }}','{{ 'family.student.edit'|trans }}','width=1024,height=900')"></button>
+                    {% endif %}
 					<button title="{{ 'family.student.remove'|trans }}" type="button"
                             class="collection-remove collection-action halflings halflings-erase btn btn-warning"
                             style="float: right;"></button>
