--- a/src/Busybee/FamilyBundle/Resources/views/Family/details.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/details.html.twig
@@ -18,6 +18,14 @@
 
                 </div>
             </div>
+            <div class="row">
+                <div class="well col-sm-6">
+                    {{ form_row(form.firstLanguage) }}
+                </div>
+                <div class="well col-sm-6">
+                    {{ form_row(form.secondLanguage) }}
+                </div>
+            </div>
         </div>
     </div>
 </div>
