--- a/src/Busybee/FamilyBundle/Resources/views/Family/studentPanel.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/studentPanel.html.twig
@@ -9,15 +9,12 @@
 "BusybeeFamilyBundle:Family:studentCollection.html.twig" %}
 
 <div class="panel panel-primary busybee-panel">
-    {% include "BusybeeFamilyBundle:Family:panelHeader.html.twig" with {'header': 'family.title.people'} %}
+    {% include "BusybeeFamilyBundle:Family:panelHeader.html.twig" with {'header': 'family.title.students'} %}
     <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     {% include 'BusybeeFamilyBundle:Family:students.html.twig' %}
-                </div>
-                <div class="col-sm-6">
-                    {% include 'BusybeeFamilyBundle:Family:caregiver.html.twig' %}
                 </div>
             </div>
         </div>
