--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -9,6 +9,7 @@
 {% block stylesheets %}
 	{{ parent() }}
 	{% include 'BusybeeHomeBundle:AutoComplete:style.html.twig' %}
+    {% include 'BusybeeHomeBundle:Toggle:style.html.twig' %}
 {% endblock stylesheets %}
 
 
@@ -32,7 +33,6 @@
 			{% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
             {% set disabled = '' %}
             {% if name == 'staff' and form.staff.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
-            {% if name == 'careGiver' and form.careGiver.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
             {% if name == 'student' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
             {% if name == 'user' and form.user.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
 			<li{{ disabled }}><a href="#{{ name }}" role="tab" data-toggle="tab">{{ tab.label|trans({}, translation) }}</a></li>
@@ -46,10 +46,6 @@
             {% if name == 'staff' and form.staff.person is not defined %}
                 <div class="tab-pane" id="{{ name }}" >
                     {%  include 'BusybeeFormBundle:Forms:emptyTab.html.twig' with {'name': 'person.staff.title'|trans({'%name%': form.vars.value.formatName}) }  %}
-                </div>
-            {% elseif name == 'careGiver' and form.careGiver.person is not defined %}
-                <div class="tab-pane" id="{{ name }}" >
-                    {%  include 'BusybeeFormBundle:Forms:emptyTab.html.twig' with {'name': 'person.caregiver.title'|trans({'%name%': form.vars.value.formatName}) }  %}
                 </div>
             {% elseif name == 'student' and form.student.person is not defined %}
                 <div class="tab-pane" id="{{ name }}" >
@@ -67,7 +63,7 @@
 					</div>
 				</div>
 				{% endif %}
-				{% include(tab.include) %}
+                {% include tab.include %}
 			</div>
             {% endif %}
 			{% set active = '' %}
@@ -80,6 +76,7 @@
 {% block javascripts %}
 	{{ parent() }}
     {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+    {% include 'BusybeeHomeBundle:Toggle:script.html.twig' %}
     <script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
     {% include 'BusybeePersonBundle:Person:script.html.twig' %}
