--- a/src/Busybee/FamilyBundle/Resources/views/Family/careGiverCollection.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/careGiverCollection.html.twig
@@ -33,19 +33,36 @@
             </div>
         </div>
         <div class="row row-striped">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 {{ form_row(form.emailContact) }}
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 {{ form_row(form.smsContact) }}
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.phoneContact) }}
             </div>
         </div>
         <div class="row row-striped">
-            <div class="col-sm-6">
-                {{ form_row(form.phoneContact) }}
-            </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 {{ form_row(form.mailContact) }}
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.newsletter) }}
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.reporting) }}
+            </div>
+        </div>
+        <div class="row row-striped">
+            <div class="col-sm-4">
+                {{ form_row(form.finance) }}
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.pickUpAllowed) }}
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.emergencyOnly) }}
             </div>
         </div>
         <div class="row row-striped">
